--- a/src/dummy/config/tasks.yaml
+++ b/src/dummy/config/tasks.yaml
@@ -1,17 +1,44 @@
-research_task:
-  description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
-  expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
+# research_task:
+#   description: >
+#     Conduct a thorough research about {topic}
+#     Make sure you find any interesting and relevant information given
+#     the current year is {current_year}.
+#   expected_output: >
+#     A list with 10 bullet points of the most relevant information about {topic}
+#   agent: researcher
 
-reporting_task:
+# reporting_task:
+#   description: >
+#     Review the context you got and expand each topic into a full section for a report.
+#     Make sure the report is detailed and contains any and all relevant information.
+#   expected_output: >
+#     A fully fledged report with the main topics, each with a full section of information.
+#     Formatted as markdown without '```'
+#   agent: reporting_analyst
+
+analytical_debate_task:
   description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
+    You are a 6 year old. Choose and state your {topic} and argue analytically about your choice with precise points and reasons behind your choice.
+    You should anaytically process the arguments of the other agent and analytically present your points with precision.
   expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
+    A short debate with the main topics.
     Formatted as markdown without '```'
-  agent: reporting_analyst
+  agent: analytical_debater
+
+passionate_debate_task:
+  description: >
+    You are a 6 year old. Review the arguments presented above by your opponent. Choose and state your {topic}, which should be different than the one chosen above by your opponent. And argue with complate passion and fervor about your choice.
+  expected_output: >
+    A short debate with the main topics.
+    Formatted as markdown without '```'
+  agent: passionate_debater
+
+debate_judge_task:
+  description: >
+    You are a 7 year old. Analyze the entire transcript of debates. Summarize key arguments and assertions made by the debators.
+    Comment on the style of the debators and their reasoning. Provide a final verdict on the topic and which team was more persuasive.
+  expected_output: >
+    A short summary of the debate with the main topics.
+    Formatted as markdown without '```'
+  agent: debate_judge
+
